<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity">

    <TextView
        android:id="@+id/version_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/version"
        android:textColor="#80000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Income_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="170dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/Income"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_Income_TInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/enter_income"
        app:hintTextColor="#4D000000"
        app:layout_constraintTop_toBottomOf="@id/Income_TV"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_Present_Number_System_Text_Input_EditT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/result_TV"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/text_view_shape"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_Income_TInputLayout"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_Button"
        android:elevation="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/start_button_shape"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="544dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_TV"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_Button"
        android:elevation="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/restart_button_shape"
        android:text="@string/restart"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="544dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_TV"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Tax_Details_Button"
        android:elevation="20dp"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/text_view_shape"
        android:text="@string/tax_details"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="544dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version_TV"/>
</androidx.constraintlayout.widget.ConstraintLayout>